package com.vikram.traffic;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class TrafficWeatherAnalyzerApplication {
    public static void main(String[] args) {
        SpringApplication.run(TrafficWeatherAnalyzerApplication.class, args);
    }
}
